# kandelero

./: .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: api.md  installation.md  usage.md
kandelero/: __init__.py  calculations.py  candlestick.py  utils.py
kandelero/context/: __init__.py  market_context.py
kandelero/patterns/: __init__.py  comparators.py  finder.py  helpers.py  names.py
tests/: __init__.py  conftest.py  test_candlestick.py  test_dark_cloud_cover.py  test_is_gap_down.py  test_is_gap_up.py  test_is_trap.py  test_kandelero.py  test_pattern_comparators.py  test_pattern_engulfing.py  test_pattern_finder.py  test_pattern_finder_using_context.py  test_pattern_hammer.py  test_pattern_hanging_man.py  test_pattern_harami.py  test_pattern_inverted_hammer.py  test_pattern_kicker.py  test_pattern_names.py  test_pattern_shooting_star.py  test_piercing_line.py
